basic mobile responsiveness, added project slideshow but needs more formatting, blog still needs formatting, fix collaspsing on mobile design

--- a/home.css
+++ b/home.css
@@ -2,9 +2,57 @@
  * Author: http://stuffandnonsense.co.uk/blog/about/hardboiled_css3_media_queries/
  */
 
+
+html,
+body {
+    width: 100vw !important;
+    background-color: #2B2B2B;
+}
+
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+
+    body * {
+        font-size: 2vh;
+    }
+
+    div * {
+        font-size: 2vh;
+
+    }
+
+    h1 {
+        font-size: 2vh !important;
+    }
+
+    h2 {
+        font-size: 2vh;
+
+    }
+
+    h3 {
+        font-size: 2vh;
+
+    }
+
+    h4 {
+        font-size: 2vh;
+
+    }
+
+    code {
+        font-size: 2vh;
+    }
+
     /* Styles */
+    #splash-page {
+        grid-area: splash;
+    }
+
+    #splash-text-container * {
+        padding: 3%;
+        opacity: 0.95;
+    }
 }
 
 /* Smartphones (landscape) ----------- */
@@ -49,6 +97,10 @@ only screen and (min-device-pixel-ratio : 1.5) {
 }
 
 .home-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100vh;
     border-bottom: 0.125em solid #BF712F;
@@ -160,6 +212,7 @@ a {
 #splash-text-container * {
     padding: 3%;
     opacity: 0.95;
+    white-space: nowrap;
 }
 
 #aboutme {
